renamed tab to tab_wrapper, fixed behavior of tab header on small screens <300px, separated footer link from footer element

--- a/testaufgabe/umsetzung/assets/css/styles.css
+++ b/testaufgabe/umsetzung/assets/css/styles.css
@@ -1,12 +1,34 @@
- /* Style the tab */
-.tab {
+html, body {
+    height: 100%;
+}
+
+.module_frame {
+    min-height: 100%;
+    background-color: #ffffff; 
+    padding: 5px;
+}
+
+.background {
+    height: inherit;
+    background-color: #dadada;
+}
+
+.footer {
+    /*position: absolute;
+    bottom: 0;*/
+    background-color: #ff00ff;
+}
+
+ /* Style the tab_wrapper */
+.tab_wrapper {
+    min-width: 300px;
     overflow: hidden;
     background-color: #2976ba;
     padding-left: 10px;
 }
 
-/* Style the buttons that are used to open the tab content */
-.tab button {
+/* Style the buttons that are used to open the tab_wrapper content */
+.tab_wrapper button {
     background-color: #93bfe6;
     float: left;
     border: none;
@@ -21,37 +43,29 @@
 }
 
 /* Change background color of buttons on hover */
-.tab button:hover {
+.tab_wrapper button:hover {
     background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #FFFFFF;
+/* Create an active/current tab_wrapperlink class */
+.tab_wrapper button.active {
+    background-color: #ffffff;
     padding: 14px 16px;
     margin-top: 14px;
     color: #333333;
 }
 
-/* Style the tab content */
+/* Style the tab_wrapper content */
 .news_item {
     display: none;
     padding: 6px 12px;
     border-top: none;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     margin-left: 4px;
     margin-right: 4px;
 } 
 
-.background {
-    background-color: #dadada;
-}
+/**/
+.arrow_link {
 
-.footer {
-    
-}
-
-.module_frame {
-    background-color: #ff00ff; 
-    padding: 5px;
 }
